--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,8 @@ frozenlist==1.3.1
 geographiclib==1.52
 geopy==2.2.0
 googletransx==2.4.2
+gunicorn==20.1.0
+heroku==0.1.4
 idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
@@ -39,7 +41,7 @@ pycares==4.2.2
 pycparser==2.21
 pyparsing==3.0.9
 PySocks==1.7.1
-python-dateutil==2.8.2
+python-dateutil==1.5
 python-socks==2.0.3
 pytz==2022.5
 requests==2.28.1
