--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 aiodns==3.0.0
+aioflask==0.4.0
 aiohttp==3.8.3
 aiohttp-socks==0.7.1
 aiosignal==1.2.0
@@ -22,7 +23,10 @@ frozenlist==1.3.1
 geographiclib==1.52
 geopy==2.2.0
 googletransx==2.4.2
+greenlet==1.1.3.post0
+greenletio==0.9.0
 gunicorn==20.1.0
+h11==0.14.0
 idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
@@ -40,7 +44,7 @@ pycares==4.2.2
 pycparser==2.21
 pyparsing==3.0.9
 PySocks==1.7.1
-python-dateutil>=1.5
+python-dateutil==1.5
 python-socks==2.0.3
 pytz==2022.5
 requests==2.28.1
@@ -53,6 +57,7 @@ soupsieve==2.3.2.post1
 threadpoolctl==3.1.0
 twint==2.1.20
 urllib3==1.26.12
+uvicorn==0.19.0
 Werkzeug==2.2.2
 wordcloud==1.8.2.2
 yarl==1.8.1
