--- a/requirements.txt
+++ b/requirements.txt
@@ -44,7 +44,7 @@ pycares==4.2.2
 pycparser==2.21
 pyparsing==3.0.9
 PySocks==1.7.1
-python-dateutil==1.5
+python-dateutil>=1.5
 python-socks==2.0.3
 pytz==2022.5
 requests==2.28.1
