--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ aioflask==0.4.0
 aiohttp==3.8.3
 aiohttp-socks==0.7.1
 aiosignal==1.2.0
+asgiref==3.5.2
 async-timeout==4.0.2
 attrs==22.1.0
 beautifulsoup4==4.11.1
