--- a/requirements.txt
+++ b/requirements.txt
@@ -4,22 +4,38 @@ aiohttp==3.8.3
 aiohttp-socks==0.7.1
 aiosignal==1.2.0
 asgiref==3.5.2
+async-generator==1.10
 async-timeout==4.0.2
-attrs==22.1.0
+attrs==21.4.0
 beautifulsoup4==4.11.1
+boto3==1.24.95
+botocore==1.27.95
+cached-property==1.5.2
 cchardet==2.1.7
-certifi==2022.9.24
+certifi==2022.6.15
 cffi==1.15.1
+chardet==5.0.0
 charset-normalizer==2.1.1
 click==8.1.3
 colorama==0.4.5
+configparser==3.8.1
 contourpy==1.0.5
+cryptography==37.0.4
 cycler==0.11.0
+Cython==0.29.32
+dataclasses==0.6
+datadotworld==1.8.3
+datapackage==1.15.2
+distlib==0.3.6
+dnspython==2.2.1
 elastic-transport==8.4.0
 elasticsearch==8.4.3
+et-xmlfile==1.1.0
 fake-useragent==0.1.11
+filelock==3.8.0
 Flask==2.2.2
-fonttools==4.38.0
+Flask-PyMongo==2.3.0
+fonttools==4.37.4
 frozenlist==1.3.1
 geographiclib==1.52
 geopy==2.2.0
@@ -27,38 +43,70 @@ googletransx==2.4.2
 greenlet==1.1.3.post0
 greenletio==0.9.0
 gunicorn==20.1.0
-h11==0.14.0
-idna==3.4
+h11==0.13.0
+idna==3.3
+ijson==3.1.4
+isodate==0.6.1
 itsdangerous==2.1.2
 Jinja2==3.1.2
+jmespath==1.0.1
 joblib==1.2.0
+jsonify==0.5
+jsonlines==3.1.0
+jsonpointer==2.3
+jsonschema==4.16.0
 kiwisolver==1.4.4
+linear-tsv==1.1.0
 MarkupSafe==2.1.1
 matplotlib==3.6.1
 multidict==6.0.2
+mysql-connector-python==8.0.29
 nest-asyncio==1.5.6
 numpy==1.23.4
+openpyxl==3.0.10
+outcome==1.2.0
 packaging==21.3
 pandas==1.5.1
+passlib==1.7.4
 Pillow==9.2.0
+platformdirs==2.5.2
 pycares==4.2.2
 pycparser==2.21
+pymongo==4.3.2
+pyOpenSSL==22.0.0
 pyparsing==3.0.9
+pyrsistent==0.18.1
 PySocks==1.7.1
-python-dateutil>=1.5
+python-dateutil==2.8.2
+python-dotenv==0.20.0
 python-socks==2.0.3
 pytz==2022.5
 requests==2.28.1
+rfc3986==2.0.0
+s3transfer==0.6.0
 schedule==1.1.0
 scikit-learn==1.1.2
 scipy==1.9.3
+selenium==4.3.0
 six==1.16.0
 sklearn==0.0
+sniffio==1.2.0
+sortedcontainers==2.4.0
 soupsieve==2.3.2.post1
+SQLAlchemy==1.4.42
+tableschema==1.20.2
+tabulator==1.53.5
 threadpoolctl==3.1.0
-git+https://github.com/twintproject/twint.git@origin/master#egg=twint
-urllib3==1.26.12
+trio==0.21.0
+trio-websocket==0.9.2
+twint==2.1.21
+unicodecsv==0.14.1
+urllib3==1.26.10
 uvicorn==0.19.0
+vboxapi==1.0
+virtualenv==20.16.5
 Werkzeug==2.2.2
 wordcloud==1.8.2.2
+wsproto==1.1.0
+xlrd==2.0.1
 yarl==1.8.1
