--- a/requirements.txt
+++ b/requirements.txt
@@ -37,6 +37,7 @@ MarkupSafe==2.1.1
 matplotlib==3.6.1
 multidict==6.0.2
 nest-asyncio==1.5.6
+nltk==3.2.5
 numpy==1.23.4
 packaging==21.3
 pandas==1.5.1
@@ -45,9 +46,10 @@ pycares==4.2.2
 pycparser==2.21
 pyparsing==3.0.9
 PySocks==1.7.1
-python-dateutil>=1.5
+python-dateutil==1.5
 python-socks==2.0.3
 pytz==2022.5
+regex==2022.10.31
 requests==2.28.1
 schedule==1.1.0
 scikit-learn==1.1.2
@@ -56,7 +58,8 @@ six==1.16.0
 sklearn==0.0
 soupsieve==2.3.2.post1
 threadpoolctl==3.1.0
-git+https://github.com/twintproject/twint.git@origin/master#egg=twint
+tqdm==4.64.1
+twint==2.1.20
 urllib3==1.26.12
 uvicorn==0.19.0
 Werkzeug==2.2.2
